--- a/styles.css
+++ b/styles.css
@@ -13,19 +13,17 @@
     justify-content: center;
     align-items: center;
   }
-  
-  
+
   .game-container {
     position: relative;
     width: 100%;
     max-width: 500px;
-    height: 100vh;
+    height: 100dvh;
     max-height: 800px;
     overflow: hidden;
     border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 20px #00000033;
   }
-  
   
   .background-image {
     position: absolute;
@@ -58,17 +56,17 @@
   
   /* Tela inicial */
   .content-box {
-    background-color: rgba(25, 115, 156, 0.8);
+    background-color: #0b849d;
     border-radius: 15px;
     padding: 20px;
     margin: auto;
-    margin-top: 65%;
+    margin-top: 53%;
     width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 70%;
+    height: 50%;
   }
   
   .title-container {
@@ -77,7 +75,7 @@
   }
   
   .title {
-    color: #070707;
+    color: #ffffff;
     font-size: 36px;
     margin-bottom: 20px;
     font-family: "Roboto";
@@ -123,6 +121,15 @@
     margin: 0 10px;
   }
   
+  .footer {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    text-align: center;
+    font-size: 16px;
+    color: #131313;
+  }
+
   /* Tela de seleção de perguntas */
   .header {
     display: flex;
@@ -164,11 +171,12 @@
     background-color: #2196f3;
     border-radius: 10px;
     overflow: hidden;
-    aspect-ratio: 1 / 1;
     cursor: pointer;
     transition: transform 0.3s, box-shadow 0.3s;
     padding: 10px;
     margin: 5px;
+    width: 90%;
+    padding-top: 10%;
   }
   
   .question-box.correct {
@@ -180,6 +188,9 @@
   }
   
   .question-image-container {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     display: flex;
@@ -398,7 +409,12 @@
       grid-template-columns: repeat(2, 1fr);
       gap: 10px;
     }
-  
+    
+    .question-box {
+      min-width: 100px;
+      min-height: 100px;
+    }
+
     .question-number {
       width: 25px;
       height: 25px;
