--- a/styles.css
+++ b/styles.css
@@ -60,13 +60,14 @@
     border-radius: 15px;
     padding: 20px;
     margin: auto;
-    margin-top: 53%;
+    margin-top: 35dvh;
     width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 50%;
+    min-height: 200px;
+    max-height: 400px;
   }
   
   .title-container {
